--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,10 +1,13 @@
 <table class="table">
+
+  <thead>
   <tr>
-    <td>ID</td>
-    <td>PARENT ID</td>
-    <td>Name</td>
-    <td>Price</td>
+    <th>ID</th>
+    <th>PARENT ID</th>
+    <th>Name</th>
+    <th>Price</th>
   </tr>
+  </thead>
 
   <% @products.each do |product| %>
       <tr>
