--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,8 +1,11 @@
-<table class="table">
+<table class="table table-striped">
+  <thead>
   <tr>
-    <td>ID</td>
-    <td>Name</td>
+    <th>ID</th>
+    <th>Category</th>
+    <th></th>
   </tr>
+  </thead>
 
   <% @categories.each do |category| %>
       <tr>
