--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,14 +6,18 @@
     <%= link_to "App-li-cat-i-one", '#', id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Produkty", products_path %></li>
         <li><%= link_to "Kategorie", categories_path  %></li>
+        <li><%= link_to "Produkty", products_path %></li>
+
       </ul>
+
     </nav>
+
   </div>
 </header>
 
-<% if flash[:alert] -%>
-    <div class = "alert alert-success"><%= notice %> <%= alert %></div>
+<% flash.each do |key, value |%>
+    <div class="container">
+    <div class = "alert alert-<%= key %>"> <%= value %></div></div>
 <% end %>
 
