--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,6 +8,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Kategorie", categories_path  %></li>
         <li><%= link_to "Produkty", products_path %></li>
+        <li><%= link_to "Customers", customers_path %></li>
 
       </ul>
 
