--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -8,7 +8,7 @@
 
     <p>
       <%= f.label :name %>
-      <%= f.text_field :name %>
+      <%= f.text_field :name, class: 'form-control'  %>
     </p>
 
     <p>
