--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,6 +9,7 @@
         <li><%= link_to "Kategorie", categories_path  %></li>
         <li><%= link_to "Produkty", products_path %></li>
         <li><%= link_to "Customers", customers_path %></li>
+        <li><%= link_to "Orders", orders_path %></li>
 
       </ul>
 
