--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -8,8 +8,9 @@
   <% @orders.each do |order| %>
       <tr>
         <td><%= order.id %></td>
-        <td><%= order.customer_id %></td>
         <td><%= order.customer.name %></td>
+        <td><%= order.product.name %></td>
+
         <td>
           <%= link_to "Delete", order, method: :delete, class: 'btn btn-danger' %>
           <%= link_to "Edit", edit_order_path(order), class: 'btn btn-warning' %>
