--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,6 +10,7 @@
         <li><%= link_to "Produkty", products_path %></li>
         <li><%= link_to "Customers", customers_path %></li>
         <li><%= link_to "Orders", orders_path %></li>
+        <li><%= link_to "Product Order", product_orders_path %></li>
 
       </ul>
 
