--- a/app/views/orders/_form_fields.html.erb
+++ b/app/views/orders/_form_fields.html.erb
@@ -2,6 +2,10 @@
     <div class="form-group">
       <%= customer.label :name %>
       <%= customer.text_field :name, class: 'form-control' %>
-
     </div>
+    <%= render 'form_fields_product', f: f %>
+
+
+
 <% end %>
+
