--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -4,10 +4,12 @@
           <%= error %>
         </div>
     <% end %>
-    <%= render 'form_fields', f: f %>
 
-    <%= f.submit class: 'btn btn-default' %>
+    <%= render 'field_fields_customer', f: f %>
+
+    <%= link_to_add_fields "Dodaj Produkt", f, :product %>
+
+    <%= f.submit class: "add_fields btn btn-success add-more"%>
 
 <% end %>
-
 
