--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -9,12 +9,12 @@
           <%= builder.label :name %>
           <%= builder.text_field :name, class: 'form-control' %>
         </div>
-    <% end %>
-    <%= f.fields_for :product  do |product| %>
-        <%= render 'product_fields', f: product %>
-    <% end %>
 
-    <%= link_to_add_fields 'Product', f, :product %>
+
+
+    <% end %>
+    <%= link_to_add_fields '+', f, :product_order %>
+
     <%= f.submit class: "add_fields btn btn-success add-more" %>
 <% end %>
 
