--- a/app/views/orders/_product_order_fields.html.erb
+++ b/app/views/orders/_product_order_fields.html.erb
@@ -2,10 +2,11 @@
   <%= f.hidden_field :id %>
   <%= f.label :quantity %>
   <%= f.number_field :quantity, class: 'form-control bfh-number' %>
-
   <%= f.fields_for :product, @order.product.build do |builder| %>
+      <%= f.hidden_field :_destroy %>
       <%= render 'product_fields', f: builder %>
   <% end %>
+  <%= link_to 'Delete', '#', class: 'remove_fields' %>
   <br><br>
 
 </div>
