--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,38 +1,41 @@
-<table class="table table-striped">
+<table class="table table-hover">
   <thead>
   <tr>
     <th>ID</th>
     <th>Customer</th>
     <th>Zamowienie</th>
     <th>Quantity</th>
-    <th>Price</th>
-    <th>Total Price</th>
-    <th>Action</th>
   </tr>
   </thead>
+  <tbody>
   <% @orders.each do |order| %>
-      <tr>
+      <tr data-toggle="collapse" data-target="#<%= order.id %>" class="">
         <td><%= order.id %></td>
         <td><%= order.customer.name %></td>
-        <td><%= order.product.map(&:name).join(', ') %></br></td>
-        <td><%= order.product_order.map(&:quantity).join(', ') %></td>
-        <td><%= order.product.map(&:price).join(', ') %></td>
+        <td><%= order.total_price %></td>
         <td>
-
-      <%= order.total_price %>
-
-        </td>
-
-
-
-        <td> <%= link_to "Delete", order, method: :delete, class: 'btn btn-danger' %>
+          <%= link_to "Delete", order, method: :delete, class: 'btn btn-danger' %></i>
           <%= link_to "Edit", edit_order_path(order), class: 'btn btn-warning' %>
-
+          <a>
+            <span class="glyphicon glyphicon-chevron-down"></span>
+          </a>
         </td>
       </tr>
+      <td style="table-accordian" colspan="<%= order.id %>" class="hiddenRow">
+        <div class="accordian-body collapse" id="<%= order.id %>">
+          <% order.product.each do |order, array| %>
+              <%= order.name %>
+              <%= order.price %>
+          <% end %>
+          <hr/>
+          <%= order.total_price %>
+        </div>
   <% end %>
-</table>
-
+  </table>
 <%= link_to "New", new_order_path, class: 'btn btn-success' %>
+</tbody>
+
+
+
 
 
