--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,6 +6,7 @@
     <th>PARENT ID</th>
     <th>Name</th>
     <th>Price</th>
+    <th>{{ product.name }}</th>
   </tr>
   </thead>
 
@@ -17,11 +18,11 @@
         <td><%= product.price %></td>
         <td>
           <%= link_to 'Delete', product, method: :delete, class: 'btn btn-danger' %>
-        <%= link_to 'Edit', edit_product_path(product), class: 'btn btn-warning' %>
+          <%= link_to 'Edit', edit_product_path(product), class: 'btn btn-warning' %>
         </td>
       </tr>
 
   <% end %>
 </table>
 
-<%= link_to 'New', new_product_path, class: 'btn btn-success'%>
+<%= link_to 'New', new_product_path, class: 'btn btn-success' %>
