--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,12 +6,13 @@
     <%= render 'layouts/rails_default' %>
     <%= render 'layouts/shim' %>
   </head>
-  <body>
+  <body ng-app="app">
 
   <%= render 'layouts/header' %>
   <div class="container">
     <%= yield %>
     <%= render 'layouts/footer' %>
-  </div>
+
+  <ui-view></ui-view>
   </body>
   </html>
