--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,4 +1,4 @@
-<table class="table table-hover">
+<table ng-table class="table table-hover">
   <thead>
   <tr>
     <th>ID</th>
@@ -33,6 +33,7 @@
   <% end %>
   </table>
 <%= link_to "New", new_order_path, class: 'btn btn-success' %>
+<%= link_to "Sale", new_order_path, class: 'btn btn-success' %>
 </tbody>
 
 
