--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,26 +1,34 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
+<% if logged_in? %>
+    <header class="navbar navbar-fixed-top navbar-inverse">
 
-  <title><%= @title %></title>
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <%= link_to "App-li-cat-i-one", '#', id: "logo" %>
+          </div>
+          <ul class="nav navbar-nav">
+            <li><%= link_to "Kategorie", categories_path %></li>
+            <li><%= link_to "Produkty", products_path %></li>
+            <li><%= link_to "Customers", customers_path %></li>
+            <li><%= link_to "Orders", orders_path %></li>
+            <li><%= link_to "Product Order", product_orders_path %></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to "Log out", logout_path, method: :delete %></li>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= "ADMIN" if current_user.admin? %>
+                <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Profil", user_path(current_user) %></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
 
-  <div class="container">
-    <%= link_to "App-li-cat-i-one", '#', id: "logo" %>
-    <nav>
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Kategorie", categories_path  %></li>
-        <li><%= link_to "Produkty", products_path %></li>
-        <li><%= link_to "Customers", customers_path %></li>
-        <li><%= link_to "Orders", orders_path %></li>
-        <li><%= link_to "Product Order", product_orders_path %></li>
-
-      </ul>
-
-    </nav>
-
-  </div>
-</header>
-
-<% flash.each do |key, value |%>
+    </header>
+<% end %>
+<% flash.each do |key, value| %>
     <div class="container">
-    <div class = "alert alert-<%= key %>"> <%= value %></div></div>
+      <div class="alert alert-<%= key %>"> <%= value %></div>
+    </div>
 <% end %>
 
