--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,24 @@
 <p id="notice"><%= notice %></p>
+<p id="notice"><%= notice %></p>
+<div class="container-fluid well span6">
+  <div class="row-fluid">
+    <div class="span2" >
+      <img src="https://secure.gravatar.com/avatar/de9b11d0f9c0569ba917393ed5e5b3ab?s=140&r=g&d=mm" class="img-circle">
+    </div>
 
-<p>
-  <strong>Username:</strong>
-  <%= @user.username %>
-</p>
+    <div class="span8">
+      <h3>User Name <%= @user.username %></h3>
+      <h6>Email: <%= @user.email %></h6>
+    </div>
 
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+      <div class="btn-group">
+
+
+          <%= link_to 'Edit', edit_user_path(@user), class: 'btn btn-default' %>
+
+        <%= link_to 'Back', users_path, class: 'btn btn-primary' %>
+      </div>
+
+
+</div>
